@@ -1,4 +1,4 @@
 <master>
- <property name="title">mytitle</property>
+ <property name="title">My XORB Cockpit</property>
  <property name="head">@header_stuff;noquote@</property>
 @content;noquote@
